Updated readme for scala-2.11 compilation